# spinsolveproc

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .safety-policy.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.rst  README.md  SECURITY.md  mypy.ini  noxfile.py  pyproject.toml  tasks.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: codeql-analysis.yml  pre-commit-autoupdate.yml  release.yml  tests.yml
.jupyter/: jupyter_lab_config.py
docs/: conf.py  index.rst  installation.rst  requirements.txt  usage.rst
examples/: demo_T1IRT2.ipynb  demo_T2Bulk.ipynb
examples/data/230210-120446 T2 (fid_lyogelA)/: acqu.par  acqu.par.bak  cpmgIntegrals.pt1  cpmgSpectra.pt1  data.2d  proc.par  processing.script
examples/data/230210-120446 T2 (fid_lyogelA)/processed_data/: T2spec_2Ddata.h5
examples/data/230213-131158 Proton (lyogel)/: acqu.par  acqu.par.bak  data.1d  fid.pt1  proc.par  processing.script  spectrum.pt1
examples/data/230213-131158 Proton (lyogel)/processed_data/: Proton decay  Proton spectrum
examples/data/230213-131509 T2Bulk (lyogel_ET3500)/: T2CPMG.pt1  acqu.par  data.1d  processing.script
examples/data/230213-143621 T1 (lyogel)/: T1IR-Bulk.pt1  T1IR-Spectra.pt1  acqu.par  acqu.par.bak  data.2d  proc.par  processing.script
examples/data/230213-143621 T1 (lyogel)/processed_data/: T1spec_2Ddata.h5
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/: T1IRT2.pt2  acqu.par
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0000/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0001/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0002/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0003/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0004/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0005/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0006/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0007/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0008/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0009/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0010/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0011/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0012/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0013/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0014/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0015/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0016/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0017/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0018/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0019/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0020/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0021/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0022/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0023/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0024/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0025/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0026/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0027/: acqu.par  data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0028/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0029/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0030/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/1D_T1IRT2/0031/: data.1d
examples/data/230213-144615 T1IRT2 (lyogel_ET500_2000echoes)/processed_data/: T1IRT2array.h5  T1IRT2array.h5:com.dropbox.attrs
examples/data/240314-172103 PGSTE (lyogel_test)/: 240314-172103 PGSTE (lyogel_test).txt  DiffusionPlot.1d  DiffusionPlot.csv  DiffusionPlot.pt1  DiffusionSpectrumStacked.1d  DiffusionSpectrumStacked.csv  DiffusionSpectrumStacked.pt1  acqu.par  acqu.par.bak  data.2d  gradients.par  processing.script
examples/data/240314-172103 PGSTE (lyogel_test)/ppCode/: PGSTE.mac  PGSTEDefault.par  PGSTE_interface.mac  PGSTE_pp.mac
src/spinsolveproc/: __init__.py  cli.py  ngread_modified.py  plot.py  process.py  save.py  spinsolveproc.py  utils.py
templates/experiments/: Sample.ipynb
tests/: __init__.py  test_cli.py  test_spinsolveproc.py
