
[tool.poetry]
name = "spinsolveproc"
version = "0.1.0"
description = "Python library to process Spinsolve NMR experiments"
authors = ["Raquel Serial <raquel.serial@tuhh.de>"]

readme = "README.md"
homepage = "https://github.com/rserial/spinsolveproc"
repository = "https://github.com/rserial/spinsolveproc"
documentation = "https://spinsolveproc.readthedocs.io"
keywords = ["spinsolveproc"]
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/rserial/spinsolveproc/issues"



[tool.poetry.scripts]
spinsolveproc = 'spinsolveproc.cli:main'


[tool.poetry.dependencies]
python = "<3.12,>=3.8"

click = "^8.1.3"
plotly = "^5.22.0"
numpy = "^1.22"
pandas = "1.5.0"
h5py = "^3.9.0"
invoke = "^2.2.0"
nox = "^2023.4.22"
nox-poetry = "^1.0.3"
ipykernel = "^6.27.1"
nbformat = "^5.9.2"
pyflint = {git = "https://github.com/rserial/pyflint.git"}
nmrglue = {git = "https://github.com/jjhelmus/nmrglue.git"}


[tool.poetry.dev-dependencies]
pre-commit = "^3.1.1"
invoke = "^2.2.0"
flake8 = ">=4.0.1,<5.0.0"
flakeheaven = "^3.2.1"
flake8-builtins = "^2.1.0"
flake8-blind-except = "^0.2.1"
flake8-logging-format = "^0.9.0"
flake8-bugbear = "^23.2.13"
flake8-annotations = "^2.9.1"
flake8-docstrings = "^1.7.0"
flake8-bandit = "^3.0.0"
flake8-broken-line = "^0.6.0"
darglint = "^1.8.1"
isort = "^5.12.0"
black = "^23.1.0"
safety = "^2.4.0b1"
mypy = "^1.0.1"
sphinx = "^6.1.3"
recommonmark = "^0.7.1"
bump2version = "^1.0.1"
pytest = "^7.2.2"
xdoctest = "^1.1.1"
coverage = {version = "^7.2.1", extras = ["toml"]}
pytest-cov = "^3.0.0"
watchdog = {version = "^2.3.1", extras = ["watchmedo"]}

[tool.poetry.group.dev.dependencies]
notebook = "^7.0.6"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["spinsolveproc"]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "if settings.DEBUG:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == __main__:"
]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.flakeheaven]
format = "grouped"
exclude = ["demo_Proton.ipynb", "demo_T2Bulk.ipynb", "demo_T1.ipynb", "demo_T1IRT2.ipynb", "demo_T2.ipynb"]
max_line_length = 99
show_source = true
docstring-convention = "google"
extended_default_ignore = []


[tool.flakeheaven.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*", "-W503", "-E203"]
mccabe = ["+*"]
flake8-annotations = ["+*", "-ANN1??", "-ANN401"]
flake8-docstrings = ["+*", "-D212"]
"flake8-*" = ["+*"]
pylint = ["-C????", "-E????", "+F????", "+I????", "-R????", "-W????"]

[tool.flakeheaven.exceptions."tests/"]
flake8-bandit = ["-S101"]

[tool.mypy]
warn_return_any = false
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pytest","click.*","invoke.*","nox.*","nox_poetry.*","nmrglue.*","scipy.*","pandas.*","plotly.*","h5py.*"]
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_unreachable = true
warn_no_return = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
known_third_party = ["invoke", "nox", "nox_poetry"]

[tool.black]
line-length = 99
target-version = ["py37"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
