[project]
name = "spinsolveproc"
version = "0.2.2"
description = "Python library to process Spinsolve NMR experiments."
authors = [
  {name = "Raquel Serial", email = "raquelserial@gmail.com>"},
  {name = "Federico Jaureguialzo", email = "fedejaure@gmail.com"}
]
readme = "README.md"
keywords = ["spinsolveproc"]
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = "<3.13,>=3.10"
dependencies = [
  "typer[all] (>=0.12.5,<1.0.0)",
  "plotly (>=5.24.1,<6.0.0)",
  "numpy (>=2.1.3,<3.0.0)",
  "pandas (>=2.2.3,<3.0.0)",
  "h5py (>=3.12.1,<4.0.0)",
  "nmrglue (>=0.11,<1.0)",
  "flintpy-nmr (>=0.1.1,<1.0.0)",
]

[tool.poetry.urls]
homepage = "https://github.com/rserial/spinsolveproc"
repository = "https://github.com/rserial/spinsolveproc"
documentation = "https://spinsolveproc.readthedocs.io"
"Bug Tracker" = "https://github.com/rserial/spinsolveproc/issues"

[tool.poetry.scripts]
spinsolveproc = 'spinsolveproc.cli:app'

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
invoke = "^2.2.0"
bump2version = "^1.0.1"
watchdog = {version = "^6.0.0", extras = ["watchmedo"]}
jupyterlab = "^4.4.7"
jupyterlab-templates = "^0.5.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
xdoctest = "^1.2.0"
coverage = {version = "^7.10.6", extras = ["toml"]}
pytest-cov = "^6.3.0"

[tool.poetry.group.linters.dependencies]
isort = "^5.13.2"
black = "^25.1.0"
ruff = "^0.12.12"
nbqa = "^1.9.1"

[tool.poetry.group.security.dependencies]
safety = "^3.6.1"

[tool.poetry.group.typing.dependencies]
mypy = "^1.17.1"
pandas-stubs = "^2.3.2.250827"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.1.3"
recommonmark = "^0.7.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["spinsolveproc"]

[tool.coverage.report]
fail_under = 10
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "if settings.DEBUG:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == __main__:"
]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
target-version = "py310"
output-format = "full"
line-length = 99
fix = true
extend-exclude = [
    "docs/*",
]

[tool.ruff.lint]
select = [
  "E", "F", "W",  # flake8
  "C",  # mccabe
  "I",  # isort
  "N",  # pep8-naming
  "D",  # flake8-docstrings
  "ANN",  # flake8-annotations
  "S",  # flake8-bandit
  "BLE",  # flake8-blind-except
  "B",  # flake8-bugbear
  "A",  # flake8-builtins
  "G",  # flake8-logging-format
  "ERA",  # eradicate
  "ISC",  # flake8-implicit-str-concat
  "RUF",  # Ruff-specific rules
]
ignore = ["ANN101", "ANN401"]
unfixable = [
  "ERA",  # Don't remove commented-out code
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
".jupyter/jupyter_lab_config.py" = ["E501", "ERA001"]
"examples/*" = ["D100"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["spinsolveproc"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
known_third_party = ["invoke", "nox", "nox_poetry"]

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["pytest.*", "invoke.*", "nox.*", "nox_poetry.*", "h5py.*", "nmrglue.*", "scipy.*", "plotly.*"]
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = true
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_unreachable = true
warn_no_return = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
